Fixing some styling issues

--- a/index.html
+++ b/index.html
@@ -58,6 +58,60 @@
 					    <td>Entry Line 3</td>
 					    <td>Entry Line 4</td>
 					  </tr>
+						<tr>
+					    <td>Entry Line 1</td>
+					    <td>Entry Line 2</td>
+					    <td>Entry Line 3</td>
+					    <td>Entry Line 4</td>
+					  </tr>
+						<tr>
+					    <td>Entry Line 1</td>
+					    <td>Entry Line 2</td>
+					    <td>Entry Line 3</td>
+					    <td>Entry Line 4</td>
+					  </tr>
+						<tr>
+					    <td>Entry Line 1</td>
+					    <td>Entry Line 2</td>
+					    <td>Entry Line 3</td>
+					    <td>Entry Line 4</td>
+					  </tr>
+						<tr>
+					    <td>Entry Line 1</td>
+					    <td>Entry Line 2</td>
+					    <td>Entry Line 3</td>
+					    <td>Entry Line 4</td>
+					  </tr>
+						<tr>
+					    <td>Entry Line 1</td>
+					    <td>Entry Line 2</td>
+					    <td>Entry Line 3</td>
+					    <td>Entry Line 4</td>
+					  </tr>
+						<tr>
+					    <td>Entry Line 1</td>
+					    <td>Entry Line 2</td>
+					    <td>Entry Line 3</td>
+					    <td>Entry Line 4</td>
+					  </tr>
+						<tr>
+					    <td>Entry Line 1</td>
+					    <td>Entry Line 2</td>
+					    <td>Entry Line 3</td>
+					    <td>Entry Line 4</td>
+					  </tr>
+						<tr>
+					    <td>Entry Line 1</td>
+					    <td>Entry Line 2</td>
+					    <td>Entry Line 3</td>
+					    <td>Entry Line 4</td>
+					  </tr>
+						<tr>
+					    <td>Entry Line 1</td>
+					    <td>Entry Line 2</td>
+					    <td>Entry Line 3</td>
+					    <td>Entry Line 4</td>
+					  </tr>
 					  <tr>
 					    <td>Entry Last Line 1</td>
 					    <td>Entry Last Line 2</td>
@@ -70,10 +124,10 @@
 				
 				<h2>Usage</h2>
 
-				<pre><code>$(document).ready(function(){
-				    $("table.decapitate").decapitate();
-				});
-				</code></pre>
+<pre><code>$(document).ready(function(){
+    $("table.decapitate").decapitate();
+});
+</code></pre>
 
 				<p>That's it! Ensure that you've wrapped your header row with <code>&lt;thead&gt;</code> for cross-compatibility</p>
 
