Actually include the plugin..

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
-		<script src="jquery.decapitate.js"></script>
+		<script src="javascripts/jquery.decapitate.js"></script>
 	  <script>
 
 			$(document).ready(function(){
